<resources>
    <string name="app_name">Laboratorio4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_here">Imagen aqui</string>
    <string name="nombre">Nombre</string>
    <string name="esta_app">La ciudad de Guatemala es la capital del país conocido como "país de la eterna primavera", su verdadero nombre es "Nueva Guatemala de la Asunción". Es una ciudad con mucha cultura, lugares hermosos y gente muy amable.\n\
    \n\Esta app esta realizada con el proposito de que puedas conocer un poco sobre los principales lugares turisticos que Guatemala ofrece y poder visitarlos y pasar un buen momento.\n</string>
    <string name="tikal">Tikal</string>
    <string name="antigua">Antigua</string>
    <string name="semuc">Semuc</string>
    <string name="comentar">Comentar</string>
    <string name="comentario">Comentario</string>
    <string name="descripcion1">Tikal (o Tik`al, de acuerdo con la ortografía maya moderna) es uno de los mayores yacimientos arqueológicos y centros urbanos de la civilización maya precolombina. Está situado en el municipio de Flores, en el departamento de Petén, en el territorio actual de la República de Guatemala y forma parte del Parque nacional Tikal, que fue declarado Patrimonio de la Humanidad, por Unesco, en 1979.\n\
        Según los glifos encontrados en el yacimiento, su nombre maya habría sido Yax Mutul.​Tikal fue la capital de un estado beligerante, que se convirtió en uno de los reinos más poderosos de los antiguos mayas.3​4​ Aunque la arquitectura monumental del sitio se remonta hasta el siglo iv a. C.\n\
        Tikal alcanzó su apogeo durante el Período Clásico, entre el 200 y el 900 d. C. Durante este tiempo, la ciudad dominó gran parte de la región maya, en el ámbito político, económico y militar; mantenía vínculos con otras regiones, a lo largo de Mesoamérica, incluso con la gran metrópoli de Teotihuacan, en el lejano Valle de México.\n\
        Después del Clásico Tardío, no se construyeron monumentos mayores.\n\
        Con una larga lista de gobernantes dinásticos, el descubrimiento de muchas de sus respectivas tumbas y el estudio de sus monumentos, templos y palacios, Tikal es probablemente la mejor comprendida de las grandes ciudades mayas de las tierras bajas de Mesoamérica.\n\
        Tikal se puede explorar en el transcurso de uno o varios días. Hay ruinas a la vista, senderos para recorrer y animales para observar. Es verdaderamente un lugar increíble.\n\

        Es comprensible que la mayoría de los visitantes están aquí por ver las ruinas, que son ciertamente impresionantes. La mayor parte de las estructuras que aún se mantienen hoy en día fueron construidas a finales del siglo VII. Los senderos conectan las diferentes ruinas y ofrecen buena vista de la selva densa del Parque Nacional Tikal. Durante sus exploraciones, puede que se encuentre con monos arañas, pizotes y varios tipos de aves.\n\

        La Gran Plaza es uno de los aspectos más destacados de Tikal. Aquí encontrará el Templo I, el cual, quizás ya haya visto en carteles o folletos turísticos. Es una estructura masiva e imponente que se eleva a una altura de 144 pies (44 metros). El templo I fue construido en honor a Hasaw Chan K`awil, uno de los gobernantes más destacados de Tikal. Al otro lado de la plaza está el Templo II, el cual en algunas ocasiones se puede escalar para observar la vista de la zona circundante.</string>
    <string name="descripcion2">La belleza de esta ciudad, Patrimonio Cultural de la Humanidad por la UNESCO,  radica en cada uno de sus detalles. Los que la visitan quedan maravillados con sus atractivos históricos. Antiguos templos y monasterios forman parte de su riqueza.\n\
        Fundada el 10 de marzo de 1543, La Antigua Guatemala fue declarada Patrimonio Cultural de la Humanidad por la Unesco en el año 1979. Esta bella y mágica ciudad colonial guarda casi quinientos años de historia, con un clima privilegiado y una excepcional vista hacia los volcanes de Fuego y Acatenango.\n\
        Fue construida en el Valle de Panchoy y nombrada la tercera sede de la capital de Guatemala. En esta ciudad el tiempo se detuvo y quedó atrapado en las gruesas paredes de sus templos, sus monasterios y sus casas coloniales. Esta colorida población aún conserva edificaciones restauradas del siglo XVI y puede ser recorrida a pie a través de sus calles empedradas.\n\
        Desde el Cerro de la Cruz, ubicado al nororiente de la urbe, La Antigua Guatemala se ve impresionante. Admirable es también el emblemático Volcán de Agua, que ha sido testigo de las glorias y caídas de la población. La belleza de esta ciudad radica en cada uno de sus detalles. Los que la visitan quedan maravillados con sus atractivos históricos, antiguos templos y monasterios que forman parte de su legado.\n\
        Luego de haber sufrido varios terremotos, ha permanecido detenida en el tiempo y es admirada por sus calles empedradas, casas coloniales, monumentos civiles, leyendas y tradiciones.\n\
        Los principales atractivos turísticos de la Antigua son El Palacio de los Capitanes Generales, El Convento y Arco de Santa Catalina, La Plaza Mayor, El Museo de Jade, La Antigua Catedral de Guatemala, el museo de la Universidad de San Carlos, la Ruta Santa del Hermano Pedro, entre otros. La ciudad también es rica en artesanías tales como tejidos típicos, cerámica, productos de plata y oro, cerería, productos metálicos, dulces típicos y gastronomía.</string>

    <string name="descripcion3">Hablando sobre el origen de este hermoso lugar existen referencias históricas que indican que la existencia de este paraíso se da en 1950 cuando las autoridades de la Municipalidad de Lanquín se aventuraron a la zona para atender al señor Benjamín Rosales quien había sufrido un accidente mientras pescaba en el lugar.\n\
        El secretario municipal, Francisco Reyes Narciso, envió notas informando de la singular belleza del sitio a la gobernación departamental, al instituto de turismo y a los medios de comunicación.\n\
        Semuc Champey es un paraíso natural que se encuentra localizado en el municipio de Cobán,
         del departamento de Alta Verapaz. Queda en las proximidades del Parque Nacional Grutas de Lanquín.\n\
        El lugar es un atractivo turístico del departamento de Alta Verapaz y de la República de Guatemala.Se encuentra en un valle con laderas de alta pendiente, bordeado por un borde tropical con una gran variedad de flora.\n\
        Ocupa, como una especie de puente natural, alrededor de 300 metros de largo en los que hay lagunas con profundidades
        de uno hasta cuatro metros.\n\
        Por debajo del mismo corre el Río Cahabón y al final de su trayecto, el agua de las lagunas cae formando una catarata de 40 metros de altura.\n\
        El bosque subtropical que rodea al lugar colabora para que exista una enorme riqueza ecológica.\n\
        Entre las especies que sobresalen las aves, mamíferos, reptiles, anfibios y peces, además de una gran variedad de especies distintas de árboles.\n\
        Cuenta con un mirador de más de 50 metros de altura para observar los 350 metros de largo de las pozas naturales del complejo natural. Las cataratas de hasta 40 pies de alto y todas las pozas que son alimentadas por riachuelos, maravillan al visitante. </string>

    <string name="phrase1">El corazon del
        \n\Mundo Maya</string>
    <string name="phrase2">Antigua
        \n\Guatemala.
        \n\Patrimonio
        \n\Cultural</string>
    <string name="phrase3">El lugar donde
        \n\el rio se
        \n\esconde bajo
        \n\las piedras</string>
    <string name="acerca_de">Acerca de</string>
    <string name="share">Share</string>

    <string name="biography">Mi nombre es Bryann Eduardo Alfaro
    \n\Nací el 2 de Julio del 2001 en la Ciudad de Guatemala
    \n\Actualmente tengo 18 años y estudio Ingeniería en Ciencias de la Computación y Tecnologías
    \n\de la Información en la Universidad del Valle de Guatemala
    \n\La Tecnologia es algo que me apasiona y me interesa siempre estar informado sobre las formas de programar y de estilos nuevos.</string>


</resources>
