<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MainActivity">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="92dp"
            android:contentDescription="@string/image_here"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/lugaresturisticos" />

        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.06999999"
            app:srcCompat="@drawable/ic_star" />-->


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/star"
            android:layout_width="54dp"
            android:layout_height="85dp"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/nombre"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText2"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/star"
            app:layout_constraintVertical_bias="0.16000003" />

        <TextView
            android:id="@+id/name_set"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text=""
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/antigua_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/esta_app"
            app:layout_constraintBottom_toTopOf="@+id/tikal_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/tikal_button"
            style="@style/ButtonStyle"
            android:text="@string/tikal"
            app:layout_constraintBaseline_toBaselineOf="@+id/antigua_button"
            app:layout_constraintEnd_toStartOf="@+id/antigua_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/antigua_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/antigua"
            app:layout_constraintBaseline_toBaselineOf="@+id/semuc_button"
            app:layout_constraintEnd_toStartOf="@+id/semuc_button"
            app:layout_constraintStart_toEndOf="@+id/tikal_button" />

        <Button
            android:id="@+id/semuc_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/semuc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintStart_toEndOf="@+id/antigua_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>